2014-04-17 : Full Catalan language pack added.
2014-04-17 : Timestamp was being incorrectly set preventing more than 1 batch of submissions updating from Turnitin. 
2014-04-17 : Student is now enrolled on the class when checking EULA acceptance to ensure they are on account.
2014-04-17 : Infinite loading of Document viewer stopped.
2014-04-17 : Originality Report link removed if no score.
2014-04-17 : Submissions in Plagiarism plugin stopped if there has been 5 unsuccessful attempts.
2014-04-17 : Conflicts with Bootstrap theme for tooltips and fixed grademark link position fixed.
2014-04-17 : Incorrect settings link in the Plagiarism plugin fixed.
2014-04-17 : Grademark link removed for student if a grade has not been set in plagiarism plugin.
2014-04-17 : Incorrect links to GradeMark and Originality Report for students have been hidden.  
2014-04-17 : Feedback release date changed on forum with plagiarism plugin to be the same as start date.
2014-02-26 : Previous Turnitin users were not being joined to account on Plagiarism plugin.
2014-02-26 : Incorrect grade scale calculation.
2014-02-26 : Editing title in course context is now updated in Turnitin.
2014-02-26 : Submit nothing link removed if submission has been made to Moodle but not yet processed by Turnitin
2014-02-26 : Troubleshooting documentation expanded.
2014-02-26 : Bug fixed with part dates in inbox when editing where timezone was not being accounted for.
2014-02-26 : Generic CSS issues that were breaking some user’s themes fixed.
2014-02-26 : Bug with updating of OR scores in Plagiarism Plugin depending on OR submissions capability fixed.
2014-02-26 : Cut off date / late submission issues solved in Plagiarism Plugin (Thanks to Chris Wharton).
2014-02-26 : Vietnamese Language pack added.
2014-02-26 : Option to send draft submissions to Turnitin in Plagiarism Plugin reinstated.
2014-02-26 : Diagnostic mode reinstated to disable logging by default.