@@ -266,8 +266,18 @@ class turnitinplugin_view {
             $mform->disabledIf('plagiarism_erater_style', 'plagiarism_erater', 'eq', 0);
         }
 
-        $mform->addElement('select', 'plagiarism_anonymity', get_string("turnitinanon", "turnitintooltwo"), $options);
-        $mform->addElement('select', 'plagiarism_transmatch', get_string("transmatch", "turnitintooltwo"), $options);
+        if ($config->useanon) {
+            $mform->addElement('select', 'plagiarism_anonymity', get_string("turnitinanon", "turnitintooltwo"), $options);
+        } else {
+            $mform->addElement('hidden', 'plagiarism_anonymity', 0);
+        }
+
+        if ($config->transmatch) {
+            $mform->addElement('select', 'plagiarism_transmatch', get_string("transmatch", "turnitintooltwo"), $options);
+        } else {
+            $mform->addElement('hidden', 'plagiarism_transmatch', 0);
+        }
+
         $mform->addElement('hidden', 'action', "defaults");
         $mform->setType('action', PARAM_RAW);
 
