@@ -1,3 +1,7 @@
+2014-06-11 : Anonymous marking and Translated matching settings removed in PP modules if they are disabled in config. 
+2014-06-11 : Ability added for instructors to refresh individual rows in a Turnitin Assignment
+2014-06-11 : Automatic grade refreshing from Turnitin can now be turned off in Turnitin Assignments
+2014-06-11 : Erroneous debugging removed
 2014-04-17 : Full Catalan language pack added.
 2014-04-17 : Timestamp was being incorrectly set preventing more than 1 batch of submissions updating from Turnitin. 
 2014-04-17 : Student is now enrolled on the class when checking EULA acceptance to ensure they are on account.
